Поправила графику всех страниц #2

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
-        <img src="img/logo_black.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
+        <img src="img/logo_device.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
       </a>
       <!--
       <form>
@@ -221,7 +221,7 @@
       <h2 class="visually-hidden">Производители</h2>
       <ul class="partnership-list">
         <li class="partners-item partners-item-1">
-          <a href="img/logo-1.svg">
+          <a href="">
             <img src="img/logo-1.png" width="260" height="100"
               alt="Логотип компании «DJI», производителя мультикоптеров, микроконтроллеров, видеооборудования">
           </a>
@@ -285,7 +285,7 @@
   <footer class="main-footer">
     <div class="footer-contacts">
       <a>
-        <img src="img/logo_yellow.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
+        <img src="img/logo_device.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
       </a>
       <p>
         г. Москва, ул. Строителей, 15<br>
