--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
 <header class="main-header">
   <nav class="main-navigation">
     <a href="index.html">
-      <img src="img\logo_black.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
+      <img src="img/logo_device.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
     </a>
     <!--
     <form>
@@ -143,7 +143,7 @@
   <footer class="main-footer">
     <div class="footer-contacts">
       <a>
-        <img src="img/logo_yellow.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
+        <img src="img/logo_device.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
       </a>
       <p>
         г. Москва, ул. Строителей, 15<br>
