Сетка на гридах для внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -10,133 +10,145 @@
 
 <body class="page-body inner-page">
 
-<header class="main-header">
-  <nav class="main-navigation">
-    <a href="index.html">
-      <img src="img/logo_device.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
-    </a>
-    <!--
+  <header class="main-header">
+    <div class="main-navigation-wrapper">
+    <nav class="main-navigation">
+      <a href="index.html">
+        <img src="img/logo_device.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
+      </a>
+      <!--
     <form>
       <input type="text" placeholder="Поиск по сайту">
       <button type="submit"></button>
     </form>
       -->
-    <ul class="site-navigation">
-      <li><a href="catalog.html">Каталог товаров</a>
-        <ul class="product-navigation">
-          <li><a href="">Виртуальная реальность</a></li>
-          <li><a>Моноподы для селфи</a></li>
-          <li><a href="">Экшн-камеры</a></li>
-          <li><a href="">Фитнес-браслеты</a></li>
-          <li><a href="">Умные часы</a></li>
-          <li><a href="">Квадрокоптер</a></li>
-        </ul>
-      </li>
-      <li><a href="">Доставка</a></li>
-      <li><a href="">Гарантия</a></li>
-      <li><a href="">Контакты</a></li>
-    </ul>
-    <ul class="user-navigation">
-      <li><a href="">Валентин Петухов</a></li>
-      <li><a href="">Выйти</a></li>
-      <li><a href="">Сравнить</a></li>
-      <li><a href="">Корзина</a></li>
-    </ul>
-  </nav>
-</header>
+      <ul class="site-navigation">
+        <li><a href="catalog.html">Каталог товаров</a>
+          <ul class="product-navigation">
+            <li><a href="">Виртуальная реальность</a></li>
+            <li><a>Моноподы для селфи</a></li>
+            <li><a href="">Экшн-камеры</a></li>
+            <li><a href="">Фитнес-браслеты</a></li>
+            <li><a href="">Умные часы</a></li>
+            <li><a href="">Квадрокоптер</a></li>
+          </ul>
+        </li>
+        <li><a href="">Доставка</a></li>
+        <li><a href="">Гарантия</a></li>
+        <li><a href="">Контакты</a></li>
+      </ul>
+      <ul class="user-navigation">
+        <li><a href="">Валентин Петухов</a></li>
+        <li><a href="">Выйти</a></li>
+        <li><a href="">Сравнить</a></li>
+        <li><a href="">Корзина</a></li>
+      </ul>
+    </nav>
+  </div>
+  </header>
 
-<main class="page-catalog-container">
-  <h1 class="page-catalog-title">Моноподы для селфи</h1>
-  <ul class="breadcrumbs">
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="catalog.html">Каталог товаров</a></li>
-    <li><a>Моноподы для селфи</a></li>
-  </ul>
-  <section class="catalog-section">
-    <h2 class="visually-hidden">Перечень товаров - моноподы</h2>
-    <div class="product-filter">
-      <h3 class="page-catalog-subtitle">Фильтр</h3>
-      <!-- Здесь будет форма фильтра -->
-    </div>
-    <div class="sorting">
-      <h3 class="page-catalog-subtitle">Сортировка</h3>
-    <ul>
-      <li class="sort-by-price"><a href="">По цене</a></li>
-      <li><a href="">По типу</a></li>
-      <li><a href="">По популярности</a></li>
-      <li><a href="">Сортировать по возрастанию</a></li>
-      <li><a href="">Сортировать по убыванию</a></li>
+  <main class="page-catalog-container">
+
+    <div class="title-conteiner">
+    <h1 class="page-catalog-title">Моноподы для селфи</h1>
+    <ul class="breadcrumbs">
+      <li><a href="index.html">Главная</a></li>
+      <li><a href="catalog.html">Каталог товаров</a></li>
+      <li><a>Моноподы для селфи</a></li>
     </ul>
     </div>
-    <div class="product-list">
-      <h3 class="visually-hidden">Список товаров</h3>
-      <ul class="catalog-category-list">
-        <li class="catalog-category-item">
-        <a href="">
-          <h3>Любительская селфи-палка</h3>
-            <p>
-              <img src="img/item-1 1.jpg" width="360" height="380" alt="Любительская селфи-палка. Внешний вид.">
-            </p>
-        </a>
-        <p class="price">500 руб.</p>
-        <div>
-          <button type="button" class="button">В корзину</button>
-          <button type="button" class="compare">Добавить к сравнению</button>
-        </div>
-        </li>
-        <li class="catalog-category-item">
-        <a href="">
-          <h3>Профессиональная селфи-палка</h3>
-            <p>
+    
+    <section class="catalog-section">
+      <h2 class="visually-hidden">Перечень товаров - моноподы</h2>
+
+      <div class="product-filter">
+        <h3 class="page-catalog-subtitle">Фильтр</h3>
+        <!-- Здесь будет форма фильтра -->
+      </div>
+
+      <div class="sorting">
+        <h3 class="page-catalog-subtitle">Сортировка</h3>
+        <ul>
+          <li class="sort-by-price"><a href="">По цене</a></li>
+          <li><a href="">По типу</a></li>
+          <li><a href="">По популярности</a></li>
+          <li><a href="">Сортировать по возрастанию</a></li>
+          <li><a href="">Сортировать по убыванию</a></li>
+        </ul>
+      </div>
+
+      <div class="product-list">
+        <h3 class="visually-hidden">Список товаров</h3>
+        <ul class="catalog-list">
+          <li class="catalog-category-item product1">
+            <a href="">
+              <h3>Любительская селфи-палка</h3>
+              <p>
+                <img src="img/item-1 1.jpg" width="360" height="380" alt="Любительская селфи-палка. Внешний вид.">
+              </p>
+            </a>
+            <p class="price">500 руб.</p>
+            <div>
+              <button type="button" class="button">В корзину</button>
+              <button type="button" class="compare">Добавить к сравнению</button>
+            </div>
+          </li>
+          <li class="catalog-category-item">
+            <a href="">
+              <h3>Профессиональная селфи-палка</h3>
+              <p>
                 <img src="img/item-2 1.jpg" width="360" height="380" alt="Профессиональная селфи-палка. Внешний вид.">
-            </p>
-        </a>
-        <p class="price">1500 руб.</p>
-        <div>
-          <button type="button" class="button">В корзину</button>
-          <button type="button" class="compare">Добавить к сравнению</button>
-        </div>
-        </li>
-        <li class="catalog-category-item">
-          <a href="">
-            <h3>Непотопляемая селфи-палка</h3>
+              </p>
+            </a>
+            <p class="price">1500 руб.</p>
+            <div>
+              <button type="button" class="button">В корзину</button>
+              <button type="button" class="compare">Добавить к сравнению</button>
+            </div>
+          </li>
+          <li class="catalog-category-item">
+            <a href="">
+              <h3>Непотопляемая селфи-палка</h3>
               <p>
                 <img src="img/item-3 1.jpg" width="360" height="380" alt="Непотопляемая селфи-палка. Внешний вид.">
               </p>
-          </a>
-          <p class="price">2500 руб.</p>
-          <div>
-            <button type="button" class="button">В корзину</button>
-            <button type="button" class="compare">Добавить к сравнению</button>
-          </div>
-        </li>
-        <li class="catalog-category-item">
-          <a href="">
-            <h3>Селфи-палка «Следуй за мной»</h3>
+            </a>
+            <p class="price">2500 руб.</p>
+            <div>
+              <button type="button" class="button">В корзину</button>
+              <button type="button" class="compare">Добавить к сравнению</button>
+            </div>
+          </li>
+          <li class="catalog-category-item">
+            <a href="">
+              <h3>Селфи-палка «Следуй за мной»</h3>
               <p>
                 <img src="img/item-4 1.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной». Внешний вид.">
               </p>
-          </a>
-          <p class="price">4900 руб.</p>
-          <p>New</p>
-          <div>
-            <button type="button" class="button">В корзину</button>
-            <button type="button" class="compare">Добавить к сравнению</button>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </section>
+            </a>
+            <p class="price">4900 руб.</p>
+            <p>New</p>
+            <div>
+              <button type="button" class="button">В корзину</button>
+              <button type="button" class="compare">Добавить к сравнению</button>
+            </div>
+          </li>
+        </ul>
+      </div>
+   
+      <div class="page-navigation">
+        <ul class="page-button">
+          <li><a href="" class="page-back">Назад</a></li>
+          <li><a class="page-number page-1">1</a></li>
+          <li><a href="" class="page-number">2</a></li>
+          <li><a href="" class="page-number">3</a></li>
+          <li><a href="" class="page-forward">Вперед</a></li>
+        </ul>
+      </div>
 
-    <div class="page-navigation">
-      <ul class="page-button">
-        <li><a href="" class="page-back">Назад</a></li>
-        <li><a class="page-number page-1">1</a></li>
-        <li><a href="" class="page-number">2</a></li>
-        <li><a href="" class="page-number">3</a></li>
-        <li><a href="" class="page-forward">Вперед</a></li>
-      </ul>
-    </div>
+    </section>
+
+    
 
   </main>
 
@@ -174,7 +186,8 @@
     </div>
     <p>
       <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="img/logo-html.svg" width="27" height="34" alt="Перейти на страницу интенсива «HTML и CSS. Профессиональная вёрстка сайтов»">
+        <img src="img/logo-html.svg" width="27" height="34"
+          alt="Перейти на страницу интенсива «HTML и CSS. Профессиональная вёрстка сайтов»">
       </a>
     </p>
   </footer>
