--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     <a>
       <img src="img/logo_device.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
     </a>
-    <p class="adress">г. Москва, ул. Строителей, 15</p>
+    <p class="address">г. Москва, ул. Строителей, 15</p>
     <p class="phone">Тел.: +7 (495) 495-95-95</p>
     <div class="footer-site-navigation">
       <ul>
