Сетка на флексах для внутренней страницы

--- a/index.html
+++ b/index.html
@@ -71,16 +71,18 @@
             alt="Самая длинная палка для селфи">
 
           <table class="bestsellers-benefits">
-            <tr>
-              <th>Длина палки</th>
-              <th>Вес палки</th>
-              <th>Материал</th>
-            </tr>
-            <tr>
-              <td>8,5 м</td>
-              <td>5 кг</td>
-              <td>Карбон</td>
-            </tr>
+            <tbody>
+              <tr>
+                <th>Длина палки</th>
+                <th>Вес палки</th>
+                <th>Материал</th>
+              </tr>
+              <tr>
+                <td>8,5 м</td>
+                <td>5 кг</td>
+                <td>Карбон</td>
+              </tr>
+            </tbody>
           </table>
 
           <p>
